--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <title>Fugas de Agua – App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
+  <!-- Fuente -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Chart.js para la gráfica -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
     :root {
       --bg-app: #f9fafb;
       --primary: #2563eb;
+      --primary-soft: #dbeafe;
       --accent: #22c55e;
       --danger: #ef4444;
       --text: #0f172a;
@@ -26,46 +29,42 @@
       font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
-    html, body {
-      height: 100%;
-    }
-
     body {
-      background: #f3f4f6;
+      background: #f2f2f7;
+      min-height: 100vh;
     }
 
     /* APP A PANTALLA COMPLETA */
-    .app-root {
+    .app-shell {
       min-height: 100vh;
       background: var(--bg-app);
       display: flex;
       flex-direction: column;
-      color: var(--text);
+      padding-top: calc(env(safe-area-inset-top, 0px) + 6px);
+      padding-bottom: calc(env(safe-area-inset-bottom, 0px));
     }
 
-    /* HEADER */
+    /* HEADER COMPACTO ESTILO iOS */
     .app-header {
-      padding: 10px 16px 8px;
+      padding: 6px 16px 4px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 1px solid rgba(148, 163, 184, 0.2);
-      background: rgba(249, 250, 251, 0.96);
+      border-bottom: 1px solid rgba(15, 23, 42, 0.03);
       backdrop-filter: blur(10px);
-      position: sticky;
-      top: 0;
-      z-index: 10;
     }
 
     .app-header-left {
       display: flex;
       flex-direction: column;
-      gap: 2px;
+      gap: 1px;
     }
 
     .app-title {
       font-size: 17px;
       font-weight: 700;
+      color: var(--text);
+      letter-spacing: -0.01em;
     }
 
     .app-subtitle {
@@ -77,26 +76,27 @@
       display: inline-flex;
       align-items: center;
       gap: 6px;
-      padding: 4px 10px;
+      padding: 4px 9px;
       border-radius: 999px;
       background: #ecfdf5;
       color: #047857;
       font-size: 11px;
       font-weight: 500;
+      border: 1px solid #bbf7d0;
     }
 
     .status-dot {
-      width: 8px;
-      height: 8px;
+      width: 7px;
+      height: 7px;
       border-radius: 999px;
       background: #22c55e;
     }
 
-    /* CONTENIDO SCROLL */
+    /* CONTENIDO SCROLLABLE */
     .app-content {
       flex: 1;
       overflow-y: auto;
-      padding: 8px 14px 10px;
+      padding: 6px 14px 10px;
       scroll-behavior: smooth;
     }
 
@@ -104,24 +104,25 @@
       font-size: 13px;
       font-weight: 600;
       margin-bottom: 6px;
+      color: var(--text);
     }
 
-    /* CARDS RESUMEN */
+    /* CARDS RESUMEN COMPACTOS */
     .summary-grid {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 8px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     .summary-card {
-      background: white;
+      background: #ffffff;
       border-radius: 14px;
-      padding: 8px 10px;
+      padding: 8px 9px;
       border: 1px solid var(--border);
       display: flex;
       flex-direction: column;
-      gap: 3px;
+      gap: 4px;
     }
 
     .summary-label {
@@ -130,8 +131,10 @@
     }
 
     .summary-value {
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 700;
+      color: var(--text);
+      letter-spacing: -0.02em;
     }
 
     .summary-chip {
@@ -148,19 +151,19 @@
       background: #fee2e2;
     }
 
-    /* CHART */
+    /* CHART CARD */
     .chart-card {
-      background: white;
+      background: #ffffff;
       border-radius: 16px;
-      padding: 9px 10px 10px;
+      padding: 9px 10px;
       border: 1px solid var(--border);
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     .chart-title {
       font-size: 12px;
       font-weight: 600;
-      margin-bottom: 3px;
+      margin-bottom: 2px;
     }
 
     .chart-subtitle {
@@ -171,7 +174,7 @@
 
     .chart-container {
       width: 100%;
-      height: 160px;
+      height: 150px;
     }
 
     .chart-container canvas {
@@ -179,13 +182,13 @@
       height: 100% !important;
     }
 
-    /* LISTAS / CARDS */
+    /* LIST CARDS */
     .list-card {
-      background: white;
+      background: #ffffff;
       border-radius: 16px;
       padding: 9px 10px;
       border: 1px solid var(--border);
-      margin-bottom: 10px;
+      margin-bottom: 9px;
     }
 
     .list {
@@ -195,7 +198,7 @@
     }
 
     .list-item {
-      border-radius: 12px;
+      border-radius: 11px;
       padding: 7px 8px;
       background: #f9fafb;
       border: 1px solid #e5e7eb;
@@ -208,12 +211,13 @@
     .list-main {
       display: flex;
       flex-direction: column;
-      gap: 1px;
+      gap: 2px;
     }
 
     .list-title {
       font-size: 12px;
       font-weight: 600;
+      color: var(--text);
     }
 
     .list-meta {
@@ -226,7 +230,7 @@
       padding: 3px 8px;
       border-radius: 999px;
       border: 1px solid #e5e7eb;
-      background: white;
+      background: #ffffff;
       color: var(--muted);
       white-space: nowrap;
     }
@@ -249,11 +253,12 @@
       background: #fee2e2;
     }
 
-    /* IA */
+    /* SECCIÓN IA */
     .ai-risk {
       font-size: 14px;
       font-weight: 700;
     }
+
     .ai-risk-high { color: #b91c1c; }
     .ai-risk-mid { color: #c05621; }
 
@@ -273,16 +278,31 @@
       margin-top: 4px;
     }
 
-    /* TABS INFERIORES */
+    /* TAB PANELS */
+    .tab-panel {
+      display: none;
+      animation: fadeIn 0.12s ease-out;
+    }
+
+    .tab-panel.active {
+      display: block;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(3px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* BOTTOM TAB BAR ESTILO iOS */
     .tab-bar {
-      height: 52px;
-      border-top: 1px solid rgba(148, 163, 184, 0.3);
-      background: rgba(248, 250, 252, 0.97);
+      height: 54px;
+      border-top: 1px solid rgba(148, 163, 184, 0.25);
+      background: rgba(248, 250, 252, 0.96);
       display: flex;
       align-items: center;
       justify-content: space-around;
-      padding: 4px 10px;
-      backdrop-filter: blur(12px);
+      padding: 4px 12px;
+      backdrop-filter: blur(14px);
     }
 
     .tab-btn {
@@ -300,13 +320,7 @@
     }
 
     .tab-btn span.icon {
-      font-size: 16px;
-    }
-
-    .tab-pill {
-      padding: 2px 8px;
-      border-radius: 999px;
-      background: transparent;
+      font-size: 17px;
     }
 
     .tab-btn-active {
@@ -318,18 +332,10 @@
       color: #1d4ed8;
     }
 
-    .tab-panel {
-      display: none;
-      animation: fadeIn 0.12s ease-out;
-    }
-
-    .tab-panel.active {
-      display: block;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(4px); }
-      to { opacity: 1; transform: translateY(0); }
+    .tab-pill {
+      padding: 2px 8px;
+      border-radius: 999px;
+      background: transparent;
     }
 
     /* SCROLL SOLO EN CONTENIDO */
@@ -340,40 +346,35 @@
       background: transparent;
     }
     .app-content::-webkit-scrollbar-thumb {
-      background: rgba(148, 163, 184, 0.7);
+      background: rgba(148, 163, 184, 0.6);
       border-radius: 999px;
     }
 
     /* RESPONSIVE */
-    @media (max-width: 640px) {
-      .summary-grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+    @media (min-width: 768px) {
+      .app-shell {
+        max-width: 480px;
+        margin: 0 auto;
+        box-shadow: 0 20px 60px rgba(15, 23, 42, 0.25);
       }
     }
 
-    @media (max-width: 420px) {
+    @media (max-width: 400px) {
       .summary-grid {
         grid-template-columns: 1fr 1fr;
       }
-      .app-content {
-        padding-inline: 10px;
-      }
     }
 
-    @media (min-width: 900px) {
-      .app-root {
-        max-width: 520px;
-        margin: 0 auto;
-        box-shadow: 0 18px 40px rgba(15, 23, 42, 0.35);
-        border-left: 1px solid rgba(148, 163, 184, 0.25);
-        border-right: 1px solid rgba(148, 163, 184, 0.25);
+    @media (max-width: 330px) {
+      .summary-grid {
+        grid-template-columns: 1fr;
       }
     }
   </style>
 </head>
 <body>
 
-<div class="app-root">
+<div class="app-shell">
   <!-- HEADER -->
   <header class="app-header">
     <div class="app-header-left">
@@ -388,7 +389,8 @@
 
   <!-- CONTENIDO -->
   <main class="app-content">
-    <!-- INICIO -->
+
+    <!-- TAB: INICIO -->
     <section id="tab-home" class="tab-panel active">
       <h3 class="section-title">Resumen general</h3>
 
@@ -427,37 +429,45 @@
       </div>
     </section>
 
-    <!-- SENSORES -->
+    <!-- TAB: SENSORES -->
     <section id="tab-sensors" class="tab-panel">
       <h3 class="section-title">Sensores y tuberías</h3>
 
       <div class="list-card">
         <div class="section-title" style="margin-bottom:4px;">Presión por sensor</div>
-        <div class="list" id="listaSensores"></div>
+        <div class="list" id="listaSensores">
+          <!-- Llenado por JS -->
+        </div>
       </div>
 
       <div class="list-card">
         <div class="section-title" style="margin-bottom:4px;">Registros de errores</div>
-        <div class="list" id="listaErrores"></div>
+        <div class="list" id="listaErrores">
+          <!-- Llenado por JS -->
+        </div>
       </div>
     </section>
 
-    <!-- ALERTAS -->
+    <!-- TAB: ALERTAS -->
     <section id="tab-alerts" class="tab-panel">
       <h3 class="section-title">Alertas y fugas</h3>
 
       <div class="list-card">
         <div class="section-title" style="margin-bottom:4px;">Alertas generadas hoy</div>
-        <div class="list" id="listaAlertas"></div>
+        <div class="list" id="listaAlertas">
+          <!-- Llenado por JS -->
+        </div>
       </div>
 
       <div class="list-card">
         <div class="section-title" style="margin-bottom:4px;">Historial de fugas</div>
-        <div class="list" id="listaFugas"></div>
+        <div class="list" id="listaFugas">
+          <!-- Llenado por JS -->
+        </div>
       </div>
     </section>
 
-    <!-- IA -->
+    <!-- TAB: IA -->
     <section id="tab-ai" class="tab-panel">
       <h3 class="section-title">IA – Predicción de fugas</h3>
 
@@ -474,9 +484,12 @@
 
       <div class="list-card">
         <div class="section-title" style="margin-bottom:4px;">Predicciones actuales</div>
-        <div class="list" id="listaPredicciones"></div>
+        <div class="list" id="listaPredicciones">
+          <!-- Llenado por JS -->
+        </div>
       </div>
     </section>
+
   </main>
 
   <!-- NAV BOTTOM -->
@@ -501,7 +514,7 @@
 </div>
 
 <script>
-  // DATOS SIMULADOS
+  // ------------------------ DATOS SIMULADOS ------------------------
   const sensores = [
     { id: "S-001", ubicacion: "Edificio A – Tubería principal", presion: 74, estado: "OK" },
     { id: "S-002", ubicacion: "Edificio A – Piso 2", presion: 69, estado: "OK" },
@@ -572,7 +585,7 @@
   const consumoHoy = 10.8;
   const consumoMes = 320.4;
 
-  // Fecha header
+  // ------------------------ HEADER FECHA ------------------------
   (function setDate() {
     const date = new Date();
     const op = { day: "numeric", month: "short" };
@@ -580,13 +593,13 @@
     document.getElementById("headerDate").textContent = "Hoy • " + hoy;
   })();
 
-  // Resumen
+  // ------------------------ RESUMEN ------------------------
   document.getElementById("summarySensors").textContent = sensores.length;
   document.getElementById("summaryLeaks").textContent = fugas.filter(f => f.estado !== "Resuelta").length;
   document.getElementById("consumoHoy").textContent = consumoHoy.toFixed(1) + " m³";
   document.getElementById("consumoMes").textContent = consumoMes.toFixed(1) + " m³";
 
-  // Lista de sensores
+  // ------------------------ LISTA SENSORES ------------------------
   const listaSensores = document.getElementById("listaSensores");
   sensores.forEach(s => {
     let badgeClass = "badge-green";
@@ -598,6 +611,7 @@
       badgeClass = "badge-red";
       estadoText = "Crítico";
     }
+
     const item = document.createElement("div");
     item.className = "list-item";
     item.innerHTML = `
@@ -610,7 +624,7 @@
     listaSensores.appendChild(item);
   });
 
-  // Errores
+  // ------------------------ LISTA ERRORES ------------------------
   const listaErrores = document.getElementById("listaErrores");
   errores.forEach(e => {
     const item = document.createElement("div");
@@ -625,12 +639,13 @@
     listaErrores.appendChild(item);
   });
 
-  // Alertas
+  // ------------------------ ALERTAS ------------------------
   const listaAlertas = document.getElementById("listaAlertas");
   alertas.forEach(a => {
     let badgeClass = "badge";
     if (a.nivel === "Crítica") badgeClass = "badge-red";
     else if (a.nivel === "Media") badgeClass = "badge-yellow";
+
     const item = document.createElement("div");
     item.className = "list-item";
     item.innerHTML = `
@@ -644,7 +659,7 @@
     listaAlertas.appendChild(item);
   });
 
-  // Fugas
+  // ------------------------ FUGAS ------------------------
   const listaFugas = document.getElementById("listaFugas");
   fugas.forEach(f => {
     let badgeClass = "badge";
@@ -665,11 +680,12 @@
     listaFugas.appendChild(item);
   });
 
-  // Predicciones IA
+  // ------------------------ PREDICCIONES IA ------------------------
   const listaPredicciones = document.getElementById("listaPredicciones");
   predicciones.forEach(p => {
     const score = Math.round(p.prob * 100);
     const riskClass = score >= 80 ? "ai-risk ai-risk-high" : "ai-risk ai-risk-mid";
+
     const item = document.createElement("div");
     item.className = "list-item";
     item.innerHTML = `
@@ -686,7 +702,7 @@
     listaPredicciones.appendChild(item);
   });
 
-  // Gráfica
+  // ------------------------ CHART ------------------------
   const ctx = document.getElementById("consumoChart").getContext("2d");
   new Chart(ctx, {
     type: "line",
@@ -728,7 +744,7 @@
     }
   });
 
-  // Tabs
+  // ------------------------ TABS ------------------------
   const tabButtons = document.querySelectorAll(".tab-btn");
   const panels = {
     home: document.getElementById("tab-home"),
@@ -740,8 +756,10 @@
   tabButtons.forEach(btn => {
     btn.addEventListener("click", () => {
       const tab = btn.getAttribute("data-tab");
+
       Object.values(panels).forEach(p => p.classList.remove("active"));
       panels[tab].classList.add("active");
+
       tabButtons.forEach(b => b.classList.remove("tab-btn-active"));
       btn.classList.add("tab-btn-active");
     });
